<resources>
    <!-- Stringhe login fragment -->
    <string name="login_label">Accedi</string>
    <string name="login_label2">Ricordami</string>
    <string name="login_edit">username</string>
    <string name="login_Edit2">password</string>
    <string name="login_button">ACCEDI</string>
    <string name="login_label4">Non hai un account ?</string>
    <string name="login_button2">Registrati </string>
    <string name="login_label3">Accedi al tuo account</string>
    <string name="register_activity_label2">Crea un nuovo account</string>
    <string name="register_activity_button">ISCRIVITI</string>
    <string name="register_activity_label">Registrazione</string>
    <string name="register_activity_edit">inserisci username</string>
    <string name="register_activity_edit2">inserisci password</string>
    <string name="register_activity_label3">"D'accordo con "</string>
    <string name="register_activity_label4"><![CDATA[Termini & Condizioni]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_label2">Benvenuto</string>
    <string name="home_label1">Scelti da noi</string>
    <string name="home_Edit">Cerca</string>
    <string name="home_label3">Potrebbero piacerti</string>
    <string name="home_button">Cerca</string>
    <string name="item_drink_button">AGGIUNGI AL CARRELLO</string>
    <string name="error_fragment_label">La ricerca non ha prodotto risultati</string>
    <string name="results_activity_label">Risultati per:</string>
    <string name="cart_activity_title">Carrello</string>
    <string name="results_cardview_label">Un classico italiano con Tanqueray London Dry Gin, note di buccia d\'arancia, chiodi di garofano e un sfacciato sentore di amarezza.</string>
    <string name="results_cardview_label2">Negroni</string>
    <string name="cart_label2">swipe a destra o sinistra per eliminare</string>
    <string name="popup_label">Paga</string>
    <string name="item_label">Super Alcolico</string>
    <string name="home_button2">Alcolici</string>
    <string name="home_button3">Frullati</string>
    <string name="home_button4">Analcolici</string>
    <string name="no_connection_button">Riprova</string>
    <string name="no_connection_label2">Connessione ad internet debole o assente. Clicca sul tasto per riprovare</string>
    <string name="no_connection_label">Oops!</string>
    <string name="pop_checkout_label">Metodo di pagamento</string>
    <string name="pop_checkout_radio">Contanti</string>
    <string name="pop_checkout_radio2">Carta</string>
    <string name="pop_checkout_edit">**** **** **** 1234</string>
    <string name="app_name">DrinkHub</string>

</resources>