<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_drinkHub"
    tools:context=".GUI.loginActivity">

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_label"
        android:textColor="@color/white_drinkHub"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_container_top"
        android:backgroundTint="@color/white_drinkHub"
        android:requiresFadingEdge="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_Image">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/login_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                android:text="@string/login_label3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/username_EditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/custom_edit_text3"
                android:drawableStart="@drawable/ic_baseline_account_circle_24"
                android:drawablePadding="12dp"
                android:drawableTint="@color/black"
                android:ems="10"
                android:hint="@string/login_edit"
                android:inputType="text"
                android:paddingStart="12dp"
                android:textAlignment="textStart"
                android:textColorHint="@color/black"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_label" />

            <EditText
                android:id="@+id/password_EditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/custom_edit_text3"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="12dp"
                android:drawableTint="@color/black"
                android:ems="10"
                android:hint="@string/login_Edit2"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:textAlignment="textStart"
                android:textColorHint="@color/black"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_EditText" />

            <ImageView
                android:id="@+id/showPw"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_show_password"
                app:layout_constraintBottom_toBottomOf="@+id/password_EditText"
                app:layout_constraintEnd_toEndOf="@+id/password_EditText"
                app:layout_constraintTop_toTopOf="@+id/password_EditText"
                app:tint="@color/black" />

            <CheckBox
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/black"
                android:text="@string/login_label2"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="@+id/password_EditText"
                app:layout_constraintTop_toBottomOf="@+id/password_EditText" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/gold_drinkHub"
                android:text="@string/login_button"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rememberMe" />

            <TextView
                android:id="@+id/register_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:text="@string/login_label4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/logo_Image"
        android:layout_width="200dp"
        android:layout_height="260dp"
        android:src="@drawable/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>