<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CardView"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/green_drinkHub"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white_drinkHub"
            app:layout_constraintBottom_toTopOf="@+id/popup_button"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/payment_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/pop_checkout_label"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_image" />

        <EditText
            android:id="@+id/payment_EditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_edit_text3"
            android:drawableStart="@drawable/baseline_credit_card_24"
            android:drawablePadding="12dp"
            android:drawableTint="@color/black"
            android:ems="10"
            android:hint="@string/pop_checkout_edit"
            android:inputType="text"
            android:paddingStart="12dp"
            android:textAlignment="textStart"
            android:textColorHint="@color/black"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Button
            android:id="@+id/button_payment"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white_drinkHub"
            android:text="@string/popup_label"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payment_EditText" />

        <ImageView
            android:id="@+id/popup_image"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/payment_label2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_payment" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/payment_label2"
            app:layout_constraintStart_toStartOf="@+id/payment_label2"
            app:layout_constraintTop_toBottomOf="@+id/payment_label2">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/pop_checkout_radio"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/payment_label2"
                app:layout_constraintTop_toBottomOf="@+id/payment_label2" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="100dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/pop_checkout_radio2" />
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>